5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4173/executions/1716_2508.log
== SUBMITION (2019-05-16 11:58:41) 
-- CODE:
a = int(input())
n = 2
k = 1
sinal = 1
f = 3
while k < a:
	acr = f +(sinal*(4/(1+n*(2+n*(3+n)))))
	sinal = sinnal*(-1)
	n +=2
print(round(acr,8))
-- EXECUTION TIME:
0.202193
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2508/main.py", line 8, in <module>
    sinal = sinnal*(-1)
NameError: name 'sinnal' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:58:45) 
-- CODE:
a = int(input())
n = 2
k = 1
sinal = 1
f = 3
while k < a:
	acr = f +(sinal*(4/(1+n*(2+n*(3+n)))))
	sinal = sinnal*(-1)
	n +=2
print(round(acr,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    sinal = sinnal*(-1)
NameError: name 'sinnal' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:59:13) 
-- CODE:
a = int(input())
n = 2
k = 1
sinal = 1
f = 3
while k < a:
	acr = f +(sinal*(4/(1+n*(2+n*(3+n)))))
	sinal = sinal*(-1)
	n +=2
print(round(acr,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    sinal = sinnal*(-1)
NameError: name 'sinnal' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 12:02:54) 
-- CODE:
a = int(input())
n = 2
k = 1
sinal = 1
while k < a:
	acr = sinal*(4/(1+n*(2+n*(3+n)))))
	sinal = sinal*(-1)
	n +=2
acr = 3*(sinal*acr)
print(round(acr,8))
-- ERROR:
File "XXXX", line 6
    acr = sinal*(4/(1+n*(2+n*(3+n)))))
                                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 12:03:43) 
-- CODE:
a = int(input())
n = 2
k = 1
sinal = 1
while k < a:
	acr = sinal*(4/(1+n*(2+n*(3+n))))
	sinal = sinal*(-1)
	n +=2
acr = 3*(sinal+0acr)
print(round(acr,8))
-- EXECUTION TIME:
0.539322
-- ERROR:
  File "/home/codebench/codes/1716/2508/main.py", line 9
    acr = 3*(sinal+0acr)
                      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 12:06:34) 
-- CODE:
a = int(input())
n = 2
k = 1
sinal = 1
while k < a:
	acr = sinal*(4/(1+n*(2+n*(3+n))))
	sinal = sinal*(-1)
	n +=2
acr = (3*sinal)+acr
print(round(acr,8))
-- ERROR:
File "XXXX", line 6
    acr = sinal*(4/(1+n*(2+n*(3+n)))))
                                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 12:07:04) 
-- CODE:
a = int(input())
n = 2
k = 1
sinal = 1
while k > a:
	acr = sinal*(4/(1+n*(2+n*(3+n))))
	sinal = sinal*(-1)
	n +=2
acr = (3*sinal)+acr
print(round(acr,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    acr = (3*sinal)+acr
NameError: name 'acr' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 12:07:12) 
-- CODE:
a = int(input())
n = 2
k = 1
sinal = 1
while k > a:
	acr = sinal*(4/(1+n*(2+n*(3+n))))
	sinal = sinal*(-1)
	n +=2
acr = (3*sinal)+acr
print(round(acr,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    acr = (3*sinal)+acr
NameError: name 'acr' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 12:07:12) 
-- CODE:
a = int(input())
n = 2
k = 1
sinal = 1
while k > a:
	acr = sinal*(4/(1+n*(2+n*(3+n))))
	sinal = sinal*(-1)
	n +=2
acr = (3*sinal)+acr
print(round(acr,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    acr = (3*sinal)+acr
NameError: name 'acr' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 12:07:55) 
-- CODE:
a = int(input())
n = 2
k = 1
sinal = 1
while k < a:
	acr = sinal*(4/(1+n*(2+n*(3+n))))
	sinal = sinal*(-1)
	n +=2
acr = (3*sinal)+acr
print(round(acr,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    acr = (3*sinal)+acr
NameError: name 'acr' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 12:08:07) 
-- CODE:
a = int(input())
n = 2
k = 1
sinal = 1
while k < a:
	acr = sinal*(4/(1+n*(2+n*(3+n))))
	sinal = sinal*(-1)
	n +=2
print(round(acr,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    acr = (3*sinal)+acr
NameError: name 'acr' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 12:09:55) 
-- CODE:
a = int(input())
n = 2
k = 1
sinal = 1
va = a
while k < a:
	va = sinal*(4/(1+n*(2+n*(3+n))))
	sinal = sinal*(-1)
	n +=2
acr = (3*sinal)+acr
print(round(acr,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    acr = (3*sinal)+acr
NameError: name 'acr' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 12:10:15) 
-- CODE:
a = int(input())
n = 2
k = 1
sinal = 1
va = a
while k < a:
	va = sinal*(4/(1+n*(2+n*(3+n))))
	sinal = sinal*(-1)
	n +=2
va = (3*sinal)+va
print(round(va,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    acr = (3*sinal)+acr
NameError: name 'acr' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 12:10:40) 
-- CODE:
a = int(input())
n = 2
k = 1
sinal = 1
va = a
while k < a:
	va = va+sinal*(4/(1+n*(2+n*(3+n))))
	sinal = sinal*(-1)
	n +=2
va = (3*sinal)+va
print(round(va,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    acr = (3*sinal)+acr
NameError: name 'acr' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 12:13:11) 
-- CODE:
a = int(input())
n = 2
k = 1
sinal = 1
while k < a:
	acr = sinal*(4/(1+n*(2+n*(3+n))))
	sinal = sinal*(-1)
	n +=2
acr = (3*sinal)+acr
print(round(acr,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    acr = (3*sinal)+acr
NameError: name 'acr' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 12:13:29) 
-- CODE:
a = int(input())
n = 2
k = 1
sinal = 1
while k < a:
	acr = sinal*(4/(1+n*(2+n*(3+n))))
	sinal = sinal*(-1)
	n += 2
	k += 1
acr = (3*sinal)+acr
print(round(acr,8))
-- OUTPUT:
2.99445215
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 12:13:38) 
-- CODE:
a = int(input())
n = 2
k = 1
sinal = 1
while k < a:
	acr = sinal*(4/(1+n*(2+n*(3+n))))
	sinal = sinal*(-1)
	n += 2
	k += 1
acr = (3*sinal)+acr
print(round(acr,8))
-- OUTPUT:
2.99445215
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 12:14:12) 
-- CODE:
a = int(input())
n = 2
k = 1
sinal = 1
while k < a:
	acr = sinal*(4/(1+n*(2+n*(3+n))))
	sinal = sinal*(-1)
	n += 2
	k += 1

print(round(acr,8))
-- OUTPUT:
-0.00554785
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 12:16:06) 
-- CODE:
a = int(input())
n = 2
k = 1
sinal = 1
while k < a:
	acr = sinal*(4/(1+n*(2+n*(3+n))))
	sinal = sinal*(-1)
	n += 2
	k += 1
acr = (3*sinal)+acr
print(round(acr,8))
-- OUTPUT:
2.99445215
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 12:16:29) 
-- CODE:
a = int(input())
n = 2
k = 1
sinal = 1
while k < a:
	acr = sinal*(4/(1+n*(2+n*(3+n))))
	sinal = sinal*(-1)
	n += 2
	k += 1
acr = 3+acr
print(round(acr,8))
-- EXECUTION TIME:
0.949775
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
2.99445215
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.00005034
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
2.99992098
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 12:16:29) 
-- CODE:
a = int(input())
n = 2
k = 1
sinal = 1
while k < a:
	acr = sinal*(4/(1+n*(2+n*(3+n))))
	sinal = sinal*(-1)
	n += 2
	k += 1
acr = 3+acr
print(round(acr,8))
-- OUTPUT:
2.99445215
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 12:16:43) 
-- CODE:
a = int(input())
n = 2
k = 1
sinal = 1
while k < a:
	acr = sinal*(4/(1+n*(2+n*(3+n))))
	sinal = sinal*(-1)
	n += 2
	k += 1
acr = 3+acr
print(round(acr,8))
-- OUTPUT:
2.99445215
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 12:16:55) 
-- CODE:
a = int(input())
n = 2
k = 1
sinal = 1
while k < a:
	acr = sinal*(4/(1+n*(2+n*(3+n))))
	sinal = sinal*(-1)
	n += 2
	k += 1
acr = 3+acr
print(round(acr,8))
-- OUTPUT:
2.99445215
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 12:17:20) 
-- CODE:
a = int(input())
n = 2
k = 0
sinal = 1
while k < a:
	acr = sinal*(4/(1+n*(2+n*(3+n))))
	sinal = sinal*(-1)
	n += 2
	k += 1
acr = 3+acr
print(round(acr,8))
-- OUTPUT:
3.00302801
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 12:17:28) 
-- CODE:
a = int(input())
n = 2
k = 0
sinal = 1
while k < a:
	acr = sinal*(4/(1+n*(2+n*(3+n))))
	sinal = sinal*(-1)
	n += 2
	k += 1
acr = 3+acr
print(round(acr,8))
-- OUTPUT:
3.00302801
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 12:17:38) 
-- CODE:
a = int(input())
n = 2
k = 1
sinal = 1
while k < a:
	acr = sinal*(4/(1+n*(2+n*(3+n))))
	sinal = sinal*(-1)
	n += 2
	k += 1
acr = 3+acr
print(round(acr,8))
-- OUTPUT:
2.99445215
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 12:17:43) 
-- CODE:
a = int(input())
n = 2
k = 1
sinal = 1
while k < a:
	acr = sinal*(4/(1+n*(2+n*(3+n))))
	sinal = sinal*(-1)
	n += 2
	k += 1
acr = 3+acr
print(round(acr,8))
-- OUTPUT:
2.99445215
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 12:17:52) 
-- CODE:
a = int(input())
n = 2
k = 1
sinal = 1
while k <= a:
	acr = sinal*(4/(1+n*(2+n*(3+n))))
	sinal = sinal*(-1)
	n += 2
	k += 1
acr = 3+acr
print(round(acr,8))
-- OUTPUT:
3.00302801
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 12:17:54) 
-- CODE:
a = int(input())
n = 2
k = 1
sinal = 1
while k <= a:
	acr = sinal*(4/(1+n*(2+n*(3+n))))
	sinal = sinal*(-1)
	n += 2
	k += 1
acr = 3+acr
print(round(acr,8))
-- OUTPUT:
3.00302801
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 12:19:13) 
-- CODE:
a = int(input())
n = 2
k = 2
sinal = 1
while k <= a:
	acr = sinal*(4/(1+n*(2+n*(3+n))))
	sinal = sinal*(-1)
	n += 2
	k += 1
acr = 3+acr
print(round(acr,8))
-- OUTPUT:
2.99445215
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 12:19:15) 
-- CODE:
a = int(input())
n = 2
k = 2
sinal = 1
while k <= a:
	acr = sinal*(4/(1+n*(2+n*(3+n))))
	sinal = sinal*(-1)
	n += 2
	k += 1
acr = 3+acr
print(round(acr,8))
-- EXECUTION TIME:
0.703853
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
2.99445215
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.00005034
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
2.99992098
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 12:19:27) 
-- CODE:
a = int(input())
n = 2
k = 1
sinal = 1
while k <= a:
	acr = sinal*(4/(1+n*(2+n*(3+n))))
	sinal = sinal*(-1)
	n += 2
	k += 1
acr = 3+acr
print(round(acr,8))
-- EXECUTION TIME:
0.918534
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.00302801
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
2.99995608
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.00006748
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 12:20:36) 
-- CODE:
a = int(input())
n = 2
k = 1
sinal = 1
f = 3
while k <= a:
	acr =  f*sinal+(4/(1+n*(2+n*(3+n))))
	sinal = sinal*(-1)
	n += 2
	k += 1
	f = f - 3
print(round(acr,8))
-- OUTPUT:
-8.99697199
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 12:20:51) 
-- CODE:
a = int(input())
n = 2
k = 1
sinal = 1
f = 3
while k <= a:
	acr =  f*sinal+(4/(1+n*(2+n*(3+n))))
	sinal = sinal*(-1)
	n += 2
	k += 1
	f = f - 3
print(round(acr,8))
-- OUTPUT:
-8.99697199
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 12:21:40) 
-- CODE:
a = int(input())
n = 2
k = 1
sinal = 1
while k <= a:
	acr = sinal*(4/(1+n*(2+n*(3+n))))
	sinal = sinal*(-1)
	n += 2
	k += 1
acr = 3.16+acr
print(round(acr,8))
-- OUTPUT:
3.16302801
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 12:21:41) 
-- CODE:
a = int(input())
n = 2
k = 1
sinal = 1
while k <= a:
	acr = sinal*(4/(1+n*(2+n*(3+n))))
	sinal = sinal*(-1)
	n += 2
	k += 1
acr = 3.16+acr
print(round(acr,8))
-- EXECUTION TIME:
0.709469
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.16302801
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.15995608
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.16006748
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 12:21:50) 
-- CODE:
a = int(input())
n = 2
k = 1
sinal = 1
while k <= a:
	acr = sinal*(4/(1+n*(2+n*(3+n))))
	sinal = sinal*(-1)
	n += 2
	k += 1
acr = 3.16+acr
print(round(acr,8))
-- OUTPUT:
3.16302801
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 12:21:58) 
-- CODE:
a = int(input())
n = 2
k = 1
sinal = 1
while k <= a:
	acr = sinal*(4/(1+n*(2+n*(3+n))))
	sinal = sinal*(-1)
	n += 2
	k += 1
acr = 3.16+acr
print(round(acr,8))
-- OUTPUT:
3.16302801
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 12:22:02) 
-- CODE:
a = int(input())
n = 2
k = 1
sinal = 1
f = 3
while k < a:
	acr = f +(sinal*(4/(1+n*(2+n*(3+n)))))
	sinal = sinal*(-1)
	n +=2
print(round(acr,8))
-- EXECUTION TIME:
1379.77
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 12:22:05) 
-- CODE:
a = int(input())
n = 2
k = 1
sinal = 1
while k <= a:
	acr = sinal*(4/(1+n*(2+n*(3+n))))
	sinal = sinal*(-1)
	n += 2
	k += 1
acr = 3+acr
print(round(acr,8))
-- OUTPUT:
3.00302801
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 12:23:11) 
-- CODE:
a = int(input())
n = 2
k = 1
sinal = 1
while k <= a:
	acr = sinal*(4/(1+n*(2+n*(3+n))))
	sinal = sinal*(-1)
	n += 2
	k += 1
acr = 3+acr
print(round(acr,8))
-- OUTPUT:
3.00302801
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 12:23:29) 
-- CODE:
a = int(input())
n = 2
k = 1
sinal = 1
while k <= a:
	acr = sinal*(4/(1+n*(2+n*(3+n))))
	sinal = sinal*(-1)
	n += 2
	k += 1
acr = 3+acr
print(round(acr,8))
-- OUTPUT:
3.00302801
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 12:23:30) 
-- CODE:
a = int(input())
n = 2
k = 1
sinal = 1
while k <= a:
	acr = sinal*(4/(1+n*(2+n*(3+n))))
	sinal = sinal*(-1)
	n += 2
	k += 1
acr = 3+acr
print(round(acr,8))
-- OUTPUT:
3.00302801
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 12:23:34) 
-- CODE:
a = int(input())
n = 2
k = 1
sinal = -1
while k <= a:
	acr = sinal*(4/(1+n*(2+n*(3+n))))
	sinal = sinal*(-1)
	n += 2
	k += 1
acr = 3+acr
print(round(acr,8))
-- OUTPUT:
2.99697199
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 12:24:02) 
-- CODE:
a = int(input())
n = 2
k = 1
sinal = 1
while k < a:
	acr = sinal*(4/(1+n*(2+n*(3+n))))
	sinal = sinal*(-1)
	n += 2
	k += 1
acr = 3+acr
print(round(acr,8))
-- OUTPUT:
2.99445215
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 12:24:41) 
-- CODE:
a = int(input())
n = 2
k = 1
sinal = 1
while k < a:
	acr = sinal*(4/(1+n*(2+n*(3+n))))
	sinal = sinal*(-1)
	n += 2
	k += 1
acr = 3+acr
print(round(acr,8))
-- OUTPUT:
2.99445215
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 12:25:12) 
-- CODE:
a = int(input())
n = 2
k = 1
sinal = 1
while k < a:
	acr = sinal*(4/(1+n*(2+n*(3+n))))
	sinal = sinal*(-1)
	n += 2
	k += 1
acr = 2.83+acr
print(round(acr,8))
-- OUTPUT:
2.82445215
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 12:25:13) 
-- CODE:
a = int(input())
n = 2
k = 1
sinal = 1
while k < a:
	acr = sinal*(4/(1+n*(2+n*(3+n))))
	sinal = sinal*(-1)
	n += 2
	k += 1
acr = 2.83+acr
print(round(acr,8))
-- EXECUTION TIME:
0.834671
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
2.82445215
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
2.83005034
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
2.82992098
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 12:25:19) 
-- CODE:
a = int(input())
n = 2
k = 1
sinal = 1
while k < a:
	acr = sinal*(4/(1+n*(2+n*(3+n))))
	sinal = sinal*(-1)
	n += 2
	k += 1
acr = 2.84+acr
print(round(acr,8))
-- OUTPUT:
2.83445215
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 12:25:27) 
-- CODE:
a = int(input())
n = 2
k = 1
sinal = 1
while k < a:
	acr = sinal*(4/(1+n*(2+n*(3+n))))
	sinal = sinal*(-1)
	n += 2
	k += 1
acr = 2.84+acr
print(round(acr,8))
-- OUTPUT:
2.83445215
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 12:31:02) 
-- CODE:
a = int(input())
n = 2
k = 1
sinal = 1
while k < a:
	acr = sinal*(4/(1+n*(2+n*(3+n))))
	sinal = sinal*(-1)
	n +=2
acr = 3*(sinal*acr)
print(round(acr,8))
-- EXECUTION TIME:
1675.63
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 12:32:01) 
-- CODE:
a = int(input())
n = 2
k = 1
sinal = 1
while k < a:
	acr = sinal*(4/(1+n*(2+n*(3+n))))
	sinal = sinal*(-1)
	n +=2
acr = (3*sinal)+acr
print(round(acr,8))
-- EXECUTION TIME:
1676.03
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 12:32:02) 
-- CODE:
a = int(input())
n = 2
k = 1
sinal = 1
while k < a:
	acr = sinal*(4/(1+n*(2+n*(3+n))))
	sinal = sinal*(-1)
	n +=2
acr = 3*(sinal+acr)
print(round(acr,8))
-- EXECUTION TIME:
1697.16
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 12:33:01) 
-- CODE:
a = int(input())
n = 2
k = 1
sinal = 1
while k < a:
	acr = sinal*(4/(1+n*(2+n*(3+n))))
	sinal = sinal*(-1)
	n +=2
acr = (3*sinal)+acr
print(round(acr,8))
-- EXECUTION TIME:
1740.3
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 14:51:11) 
-- CODE:
a = int(input())
n = 2
k = 1
sinal = 1
while k < a:
	acr = sinal*(4/(1+n*(2+n*(3+n))))
	sinal = sinal*(-1)
	n += 2
	k += 1
acr = 3+acr
print(round(acr,8))
-- OUTPUT:
2.99445215
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 15:03:55) 
-- CODE:
a = int(input())
n = 2
k = 1
sinal = 1
while k < a:
	acr = sinal*(4/(n*(1+n*(2+n))))
	sinal = sinal*(-1)
	n += 2
	k += 1
acr = 3+acr
print(round(acr,8))
-- EXECUTION TIME:
0.229187
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
2.99382716
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.00005151
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
2.99991884
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 15:03:57) 
-- CODE:
a = int(input())
n = 2
k = 1
sinal = 1
while k < a:
	acr = sinal*(4/(n*(1+n*(2+n))))
	sinal = sinal*(-1)
	n += 2
	k += 1
acr = 3+acr
print(round(acr,8))
-- EXECUTION TIME:
0.198411
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
2.99382716
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.00005151
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
2.99991884
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:03:58) 
-- CODE:
a = int(input())
n = 2
k = 1
sinal = 1
while k < a:
	acr = sinal*(4/(n*(1+n*(2+n))))
	sinal = sinal*(-1)
	n += 2
	k += 1
acr = 3+acr
print(round(acr,8))
-- OUTPUT:
2.99382716
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:05:50) 
-- CODE:
a = int(input())
n = 2
k = 1
sinal = 1
while k < a:
	acr = sinal*(4/(n*(1+n*(2+n))))
	print(acr)
	sinal = sinal*(-1)
	n += 2
	k += 1
acr = 3+acr
print(round(acr,8))
-- OUTPUT:
0.2222222222222222
-0.04
0.013605442176870748
-0.006172839506172839
2.99382716
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:07:55) 
-- CODE:
a = int(input())
n = 2
k = 1
sinal = 1
while k < a:
	acr = sinal*(4/(n*(1+n*(2+n))))
	sinal = sinal*(-1)
	n += 2
	k += 1
acr = 3+acr
print(round(acr,8))
-- OUTPUT:
2.99382716
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 15:11:36) 
-- CODE:
a = int(input())
n = 2
k = 1
sinal = 1
while k < a:
	acr += sinal*(4/(n*(1+n*(2+n))))
	sinal = sinal*(-1)
	n += 2
	k += 1
acr = 3+acr
print(round(acr,8))
-- EXECUTION TIME:
0.262766
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2508/main.py", line 6, in <module>
    acr += sinal*(4/(n*(1+n*(2+n))))
NameError: name 'acr' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:11:38) 
-- CODE:
a = int(input())
n = 2
k = 1
sinal = 1
while k < a:
	acr += sinal*(4/(n*(1+n*(2+n))))
	sinal = sinal*(-1)
	n += 2
	k += 1
acr = 3+acr
print(round(acr,8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    acr += sinal*(4/(n*(1+n*(2+n))))
NameError: name 'acr' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:11:53) 
-- CODE:
a = int(input())
n = 2
k = 1
sinal = 1
acr = 0
while k < a:
	acr += sinal*(4/(n*(1+n*(2+n))))
	sinal = sinal*(-1)
	n += 2
	k += 1
acr = 3+acr
print(round(acr,8))
-- OUTPUT:
3.18965482
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:11:53) 
-- CODE:
a = int(input())
n = 2
k = 1
sinal = 1
acr = 0
while k < a:
	acr += sinal*(4/(n*(1+n*(2+n))))
	sinal = sinal*(-1)
	n += 2
	k += 1
acr = 3+acr
print(round(acr,8))
-- OUTPUT:
3.18965482
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 15:11:57) 
-- CODE:
a = int(input())
n = 2
k = 1
sinal = 1
acr = 0
while k < a:
	acr += sinal*(4/(n*(1+n*(2+n))))
	sinal = sinal*(-1)
	n += 2
	k += 1
acr = 3+acr
print(round(acr,8))
-- EXECUTION TIME:
0.176888
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.18965482
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.19177334
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.19171211
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 15:14:03) 
-- CODE:
a = int(input())
n = 2
k = 1
sinal = 1
acr = 0
while k < a:
	acr = sinal*(4/((n)*(n+1)*(n+2)))
	
	sinal = sinal*(-1)
	n += 2
	k += 1
acr = 3+acr
print(round(acr,8))
-- EXECUTION TIME:
0.199964
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
2.99444444
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.00005034
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
2.99992097
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 15:14:07) 
-- CODE:
a = int(input())
n = 2
k = 1
sinal = 1
acr = 0
while k < a:
	acr == sinal*(4/((n)*(n+1)*(n+2)))	
	sinal = sinal*(-1)
	n += 2
	k += 1
acr = 3+acr
print(round(acr,8))
-- EXECUTION TIME:
0.165736
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 15:14:09) 
-- CODE:
a = int(input())
n = 2
k = 1
sinal = 1
acr = 0
while k < a:
	acr += sinal*(4/((n)*(n+1)*(n+2)))	
	sinal = sinal*(-1)
	n += 2
	k += 1
acr = 3+acr
print(round(acr,8))
-- EXECUTION TIME:
0.117045
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.13968254
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.14161607
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.14155633
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 15:14:30) 
-- CODE:
a = int(input())
n = 2
k = 1
sinal = 1
acr = 0
while k < a:
	acr = sinal*(4/((n)*(n+1)*(n+2)))	
	sinal = sinal*(-1)
	n += 2
	k += 1
acr = 3+acr
print(round(acr,8))
-- EXECUTION TIME:
0.186686
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
2.99444444
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.00005034
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
2.99992097
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 15:14:44) 
-- CODE:
a = int(input())
n = 2
k = 1
sinal = 1
acr = 0
while k < a:
	acr = acr +  sinal*(4/((n)*(n+1)*(n+2)))	
	sinal = sinal*(-1)
	n += 2
	k += 1
acr = 3+acr
print(round(acr,8))
-- EXECUTION TIME:
0.142232
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.13968254
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.14161607
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.14155633
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
